# caterpillar

./: .gitignore  Cargo.toml  DESIGN.md  IDEAS.md  LICENSE.md  PLANNING.md  README.md  Trunk.toml  clippy.toml  concept.md  daily.md  design.md  shell.nix  tests.capi
archive/prototypes/09/capi-builder/: Cargo.toml
capi/: .gitignore  Cargo.toml  README.md  Trunk.toml  concept.md  index.html
capi-desktop/: Cargo.toml  README.md
capi-desktop/src/: args.rs  display.rs  lib.rs  loader.rs  platform.rs  thread.rs
capi-desktop/src/loader/: channel.rs  load.rs  loader.rs  mod.rs  script_loader.rs  watch.rs
capi-runtime/: Cargo.toml
capi-runtime/src/: breakpoints.rs  builtins.rs  call_stack.rs  code.rs  compiler.rs  data_stack.rs  display.rs  effects.rs  evaluator.rs  instructions.rs  lib.rs  program.rs  runner.rs  runtime.rs  source_map.rs  updates.rs
capi-runtime/src/debugger/: event.rs  execution_context.rs  expression.rs
capi-runtime/src/runtime/: call_stack.rs  data_stack.rs  evaluator.rs  function.rs  instructions.rs  mod.rs
capi-runtime/src/syntax/: builder.rs  functions.rs  script.rs
capi-web/: Cargo.toml  README.md  build.rs
capi-web/src/: main.rs  platform.rs  run.rs  ui.rs
capi-web/src/ui/: mod.rs
capi/build-game/: Cargo.toml
capi/build-game/src/: lib.rs
capi/capi/: Cargo.toml
capi/capi-builder/: Cargo.toml
capi/capi-builder/src/: main.rs
capi/capi-debug/: Cargo.toml  index.html
capi/capi-debug/src/: client.rs  execution_context.rs  expression.rs  function.rs  main.rs  state.rs
capi/capi-process/src/: breakpoints.rs  evaluator.rs  function.rs  value.rs
capi/capi-runtime/: Cargo.toml
capi/capi-runtime/src/: breakpoints.rs  builtins.rs  call_stack.rs  code.rs  compiler.rs  data_stack.rs  debug.rs  evaluator.rs  ffi_in.rs  ffi_out.rs  functions.rs  instructions.rs  lang.rs  lib.rs  macros.rs  program.rs  runtime.rs  script.rs  source.rs  source_map.rs  symbols.rs  syntax.rs
capi/capi/src/: capi.rs  debug.rs  display.rs  effects.rs  ffi.rs  main.rs  runner.rs  server.rs  snake.rs  state.rs  tiles.rs  updates.rs
capi/cli/: Cargo.toml  build.rs
capi/cli/src/: args.rs  build_game.rs  cli.rs  deploy.rs  files.rs  headless.rs  main.rs
capi/compiler/: Cargo.toml
capi/compiler/src/: compile.rs  compiler.rs  hash.rs  host.rs  instructions.rs  intrinsics.rs  lib.rs  placeholders.rs  source_map.rs  tests.rs
capi/debugger/: Cargo.toml
capi/debugger/src/: code.rs  commands.rs  debugger.rs  ffi.rs  lib.rs  main.rs  remote_process.rs  state.rs
capi/debugger/www/: index-debugger.html  index.html
capi/ffi/: Cargo.toml
capi/ffi/src/: framed_buffer.rs  lib.rs  shared.rs
capi/game-engine/: Cargo.toml
capi/game-engine/src/: command.rs  display.rs  game_engine.rs  host.rs  input.rs  lib.rs  memory.rs  tiles.rs
capi/host/: Cargo.toml  tailwind.css
capi/host/src/: ffi_in.rs  ffi_out.rs  host.rs  lib.rs
capi/host/www/: index.html
capi/launcher/: Cargo.toml
capi/launcher/src/: main.rs
capi/process/: Cargo.toml
capi/process/src/: breakpoints.rs  builtins.rs  bytecode.rs  code.rs  command.rs  effects.rs  evaluator.rs  function.rs  host.rs  instructions.rs  lib.rs  location.rs  operands.rs  process.rs  stack.rs  value.rs
capi/protocol/: Cargo.toml
capi/protocol/src/: command.rs  host.rs  host_state.rs  lib.rs  memory.rs  runtime_state.rs  state.rs  update.rs  updates.rs
capi/runner/: Cargo.toml
capi/runtime/: Cargo.toml  index.html
capi/runtime/src/: display.rs  effects.rs  evaluator.rs  ffi.rs  ffi_in.rs  ffi_out.rs  function.rs  heap.rs  instructions.rs  lib.rs  main.rs  operands.rs  process.rs  runtime.rs  stack.rs  state.rs  tiles.rs  updates.rs  value.rs
capi/server/: Cargo.toml
capi/server/src/: args.rs  build.rs  lib.rs  main.rs  server.rs  start.rs  tests.rs
capi/snake/: Cargo.toml
capi/snake/src/: lib.rs
capi/src/: breakpoints.rs  compiler.rs  display.rs  effects.rs  ffi.rs  main.rs  process.rs  program.rs  runner.rs  server.rs  snake.rs  source_map.rs  state.rs  tiles.rs  updates.rs
capi/src/breakpoints/: decider.rs  event.rs  mod.rs  state.rs
capi/src/capi/: builtins.rs  code.rs  compiler.rs  evaluator.rs  functions.rs  mod.rs  resolver.rs  syntax.rs
capi/src/debugger/: event.rs  execution_context.rs  expression.rs  mod.rs  remote_process.rs
capi/src/games/: build.rs  mod.rs
capi/src/lang/: compiler.rs  data_stack.rs  evaluator.rs  functions.rs  mod.rs  resolver.rs  symbols.rs  syntax.rs
capi/src/process/: decider.rs  event.rs  mod.rs  state.rs
capi/src/runtime/: builtins.rs  code.rs  data_stack.rs  evaluator.rs  function.rs  instructions.rs  mod.rs  operands.rs  stack.rs  value.rs
capi/src/syntax/: expression.rs  functions.rs  location.rs
capi/src/ui/: events.rs  handle_updates.rs  mod.rs  start.rs
capi/watch/: Cargo.toml
capi/watch/src/: build.rs  lib.rs  watcher.rs
caterpillar/: Cargo.toml  README.md  index.html
caterpillar/css/: main.css
caterpillar/geometry/: triangle.geo  triangle.geo2  triangle.geo3
caterpillar/src/: html.rs  language.rs  main.rs  renderer.rs  window.rs
caterpillar/src/language/: evaluator.rs  executor.rs  mod.rs  parser.rs  tokenizer.rs  values.rs
crates/capi/: Cargo.toml  index.html  tailwind.config.js
crates/capi/src/: compiler.rs  display.rs  ffi.rs  source_map.rs  state.rs  tiles.rs  updates.rs
crosscut/cli/: Cargo.toml  build.rs
crosscut/cli/src/: build_game.rs  cli.rs  export.rs  files.rs  headless.rs
crosscut/compiler/: Cargo.toml
crosscut/compiler/src/: compiler.rs  host.rs  instructions.rs  lib.rs  source_map.rs  tests.rs
crosscut/debugger/: Cargo.toml
crosscut/debugger/src/: code.rs  commands.rs  debugger.rs  ffi.rs  main.rs
crosscut/debugger/www/: index-debugger.html
crosscut/host/: Cargo.toml
crosscut/host/src/: ffi_in.rs  host.rs
crosscut/host/www/: index.html
crosscut/protocol/: Cargo.toml
crosscut/protocol/src/: command.rs  host_state.rs  updates.rs
tools/builder/: Cargo.toml
tools/builder/src/: build.rs  deploy.rs  export.rs  main.rs  pipeline.rs  pipelines.rs  serve.rs  watch.rs  watcher.rs
(+1321 files in other folders)
