[workspace]
resolver = "2"
members = [
    "capi/build-game",
    "capi/cli",
    "capi/compiler",
    "capi/debugger",
    "capi/ffi",
    "capi/game-engine",
    "capi/host",
    "capi/protocol",
    "capi/runtime",
    "capi/server",
    "capi/watch",

    "tools/builder",
    "tools/daily",
    "tools/website",
]
default-members = ["tools/builder"]

[profile.dev]
opt-level = 3
