[workspace]
resolver = "2"
members = [
    "capi/cli",
    "capi/compiler",
    "capi/debugger",
    "capi/ffi",
    "capi/game-engine",
    "capi/host",
    "capi/protocol",
    "capi/runtime",
    "capi/watch",

    "tools/builder",
    "tools/daily",
    "tools/website",
]
default-members = ["tools/builder"]


[profile.dev]
opt-level = 3 # otherwise interpreted code becomes unbearably slow

[profile.release]
opt-level = "s" # results in the smallest code size for `capi-host.wasm`
