[workspace]
resolver = "2"
members = [
    "crosscut/cli",
    "crosscut/compiler",
    "crosscut/debugger",
    "crosscut/ffi",
    "crosscut/game-engine",
    "crosscut/host",
    "crosscut/protocol",
    "crosscut/runtime",
    "crosscut/watch",

    "tools/builder",
    "tools/daily",
    "tools/website",
]
default-members = ["tools/builder"]


[profile.dev]
opt-level = 3 # otherwise interpreted code becomes unbearably slow

[profile.release]
opt-level = "s"   # results in the smallest code size for `crosscut-host.wasm`
strip = "symbols"
lto = "fat"
