[package]
name = "capi-desktop"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "*"
crossbeam-channel = "*"
notify = "*"
notify-debouncer-mini = "*"
pixels = "*"
tracing = "*"
winit = "<0.29.0"

[dependencies.capi-core]
path = "../capi-core"

[dependencies.clap]
version = "*"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "*"
features = ["env-filter"]
