[package]
name = "capi-desktop"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "*"
crossbeam-channel = "*"
crossterm = "*"
error_reporter = "*"
notify = "*"
notify-debouncer-mini = "*"
pixels = "*"
tracing = "*"
walkdir = "*"

[dependencies.capi-core]
path = "../capi-core"

[dependencies.clap]
version = "*"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "*"
features = ["env-filter"]

[dependencies.winit]
version = "*"
features = ["rwh_05"]
