[package]
name = "capi-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
pixels = "*"
rand = "*"
serde-big-array = "*"
thiserror = "*"

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.tokio]
version = "*"
features = ["sync"]

[dependencies.winit]
version = "*"
