[package]
name = "capi-web"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "*"
console_error_panic_hook = "*"
tracing = "*"
tracing-wasm = "*"
wasm-bindgen-futures = "*"

[dependencies.capi-core]
path = "../capi-core"

[dependencies.gloo-timers]
version = "*"
features = ["futures"]

[build-dependencies]
anyhow = "*"
