[package]
name = "capi-web"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "*"
async-channel = "*"
console_error_panic_hook = "*"
sycamore = "*"
tracing = "*"
tracing-wasm = "*"
wasm-bindgen-futures = "*"
web-sys = "*"

[dependencies.capi-core]
path = "../capi-core"

[dependencies.gloo-timers]
version = "*"
features = ["futures"]


[build-dependencies]
anyhow = "*"
