[package]
name = "capi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
futures = "*"
ron = "*"
tower = "*"

[dependencies.axum]
version = "*"
features = ["ws"]

[dependencies.capi-runtime]
path = "../capi-runtime"

[dependencies.tokio]
version = "*"
features = ["full"]

[dependencies.tower-http]
version = "*"
features = ["trace"]

[dependencies.tracing-subscriber]
version = "*"
features = ["env-filter"]
