[workspace]

[package]
name = "caterpillar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
console_error_panic_hook = "0.1.7"
log = "0.4.17"
raw-window-handle = "0.5.0"
sycamore = "0.8.2"
wasm-bindgen-futures = "0.4.33"
web-sys = "0.3.60"
wasm-bindgen = "0.2.83"
futures = "0.3.25"
gloo = "0.8.0"

[dependencies.console_log]
version = "0.2.0"
features = ["color"]

[dependencies.wgpu]
version = "0.15.0"
features = ["webgl"]
