[package]
name = "capi-build-game"
version = "0.1.0"
edition = "2021"

[dependencies]
ron = "*"
snafu = "*"
tracing = "*"

[dependencies.capi-compiler]
path = "../compiler"

[dependencies.capi-game-engine]
path = "../game-engine"

[dependencies.capi-protocol]
path = "../protocol"

[dependencies.capi-watch]
path = "../watch"

[dependencies.tokio]
version = "*"
features = ["fs"]
