[package]
name = "capi-build-game"
edition = "2021"

[dependencies]
anyhow = "*"
ron = "*"
thiserror = "*"
tracing = "*"

[dependencies.capi-compiler]
path = "../compiler"

[dependencies.capi-game-engine]
path = "../game-engine"

[dependencies.capi-protocol]
path = "../protocol"

[dependencies.capi-watch]
path = "../watch"

[dependencies.tokio]
version = "*"
features = ["fs"]
