[package]
name = "capi-compiler"
version = "0.1.0"
edition = "2021"


[dependencies]
petgraph = "*"

[dependencies.blake3]
version = "*"
features = ["serde", "traits-preview"]

[dependencies.capi-runtime]
path = "../runtime"

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.udigest]
version = "*"
features = ["derive"]


[dev-dependencies]
itertools = "*"
