[package]
name = "capi-compiler"
edition = "2021"


[dependencies]
petgraph = "*"

[dependencies.blake3]
version = "*"
features = ["serde", "traits-preview"]

[dependencies.capi-runtime]
path = "../runtime"

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.thiserror]
version = "*"
default-features = false

[dependencies.udigest]
version = "*"
features = ["derive"]


[dev-dependencies]
itertools = "*"
