[package]
name = "capi-debugger"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
console_error_panic_hook = "*"
console_log = "*"
gloo-net = "*"
log = "*"
ron = "*"

[dependencies.capi-compiler]
path = "../compiler"

[dependencies.capi-game-engine]
path = "../game-engine"

[dependencies.capi-ffi]
path = "../ffi"

[dependencies.capi-protocol]
path = "../protocol"

[dependencies.capi-runtime]
path = "../process"

[dependencies.leptos]
version = "*"
features = ["csr"]

[dependencies.tokio]
version = "*"
features = ["macros", "sync"]
