[package]
name = "capi-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
ron = "*"
serde-big-array = "*"

[dependencies.capi-compiler]
path = "../compiler"

[dependencies.capi-game-engine]
path = "../game-engine"

[dependencies.capi-process]
path = "../process"

[dependencies.serde]
version = "*"
features = ["derive"]
