[package]
name = "capi-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
ron = "*"

[dependencies.capi-compiler]
path = "../compiler"

[dependencies.capi-game-engine]
path = "../game-engine"

[dependencies.capi-runtime]
path = "../runtime"

[dependencies.serde]
version = "*"
features = ["derive"]
