[package]
name = "capi-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
pixels = "*"
rand = "*"
raw-window-handle = "0.5"

[dependencies.capi-compiler]
path = "../compiler"

[dependencies.capi-ffi]
path = "../ffi"

[dependencies.capi-process]
path = "../process"

[dependencies.capi-protocol]
path = "../protocol"

[dependencies.leptos]
version = "*"
features = ["csr"]

[dependencies.tokio]
version = "*"
features = ["sync"]
