[package]
name = "capi-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
rand = "*"

[dependencies.capi-compiler]
path = "../compiler"

[dependencies.capi-ffi]
path = "../ffi"

[dependencies.capi-process]
path = "../process"

[dependencies.capi-protocol]
path = "../protocol"

# We don't depend on this directly, but we need to enable the `js` feature for
# `rand` to work.
[dependencies.getrandom]
version = "*"
features = ["js"]

[dependencies.leptos]
version = "*"
features = ["csr"]
