[package]
name = "capi-runtime"
version = "0.1.0"
edition = "2021"

[dependencies.serde]
version = "*"
default-features = false
features = ["alloc", "derive"]

[dependencies.snafu]
version = "*"
default-features = false

[dependencies.thiserror]
version = "*"
default-features = false

[dependencies.udigest]
version = "*"
features = ["derive"]
