[package]
name = "capi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
tracing = "*"
tracing-subscriber = "*"

[dependencies.axum]
version = "*"
features = ["ws"]

[dependencies.capi-compiler]
path = "../compiler"

[dependencies.clap]
version = "*"
features = ["derive"]

[dependencies.tokio]
version = "*"
features = ["full"]
