[package]
name = "capi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
ron = "*"
tracing = "*"
tracing-subscriber = "*"

[dependencies.axum]
version = "*"
features = ["ws"]

[dependencies.capi-compiler]
path = "../compiler"

[dependencies.capi-protocol]
path = "../protocol"

[dependencies.clap]
version = "*"
features = ["derive"]

[dependencies.tokio]
version = "*"
features = ["full"]
