[package]
name = "capi-server"
edition = "2021"


[dependencies]
anyhow = "*"
ron = "*"
tracing = "*"
tracing-subscriber = "*"

[dependencies.axum]
version = "*"
features = ["ws"]

[dependencies.capi-build-game]
path = "../build-game"

[dependencies.capi-protocol]
path = "../protocol"

[dependencies.capi-watch]
path = "../watch"

[dependencies.clap]
version = "*"
features = ["derive"]

[dependencies.tokio]
version = "*"
features = ["full"]


[dev-dependencies]
tempfile = "*"

[dev-dependencies.reqwest]
version = "*"
default-features = false
