[package]
name = "capi-watch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
ron = "*"
tracing = "*"

[dependencies.capi-compiler]
path = "../compiler"

[dependencies.capi-game-engine]
path = "../game-engine"

[dependencies.capi-protocol]
path = "../protocol"

[dependencies.notify]
version = "*"
default-features = false

[dependencies.tokio]
version = "*"
features = ["sync"]
