[package]
name = "capi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
console_error_panic_hook = "*"
futures = "*"
gloo = "*"
log = "*"
pixels = "*"
rand = "*"
raw-window-handle = "0.5"
ron = "*"
serde-big-array = "*"
thiserror = "*"
wasm-bindgen = "*"
web-sys = "*"

[dependencies.console_log]
version = "*"
features = ["color"]

[dependencies.leptos]
version = "*"
features = ["csr"]

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.tokio]
version = "*"
features = ["sync"]
