[package]
name = "crosscut-cli"
edition = "2021"


[dependencies]
anyhow = "*"
rand = "*"
thiserror = "*"
tracing = "*"
tracing-subscriber = "*"

[dependencies.axum]
version = "*"
features = ["ws"]

[dependencies.crosscut-compiler]
path = "../compiler"

[dependencies.crosscut-game-engine]
path = "../game-engine"

[dependencies.crosscut-protocol]
path = "../protocol"

[dependencies.crosscut-watch]
path = "../watch"

[dependencies.clap]
version = "*"
features = ["derive"]

[dependencies.tokio]
version = "*"
features = ["full"]


[dev-dependencies.reqwest]
version = "*"
default-features = false


[build-dependencies]
anyhow = "*"
