[package]
name = "crosscut-compiler"
edition = "2021"


[dependencies]
array-util = "*"
itertools = "*"
petgraph = "*"

[dependencies.blake3]
version = "*"
features = ["serde", "traits-preview"]

[dependencies.crosscut-runtime]
path = "../runtime"

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.thiserror]
version = "*"
default-features = false

[dependencies.udigest]
version = "*"
features = ["derive"]
