[package]
name = "capi-debugger"
edition = "2021"


[dependencies]
anyhow = "*"
console_error_panic_hook = "*"
console_log = "*"
gloo-net = "*"
log = "*"
ron = "*"

[dependencies.crosscut-compiler]
path = "../compiler"

[dependencies.capi-game-engine]
path = "../game-engine"

[dependencies.capi-ffi]
path = "../ffi"

[dependencies.capi-protocol]
path = "../protocol"

[dependencies.crosscut-runtime]
path = "../runtime"

[dependencies.leptos]
version = "*"
features = ["csr"]

[dependencies.tokio]
version = "*"
features = ["macros", "sync"]


[dev-dependencies]
itertools = "*"
