[package]
name = "crosscut-host"
edition = "2021"

[dependencies]
anyhow = "*"
ron = "*"

[dependencies.crosscut-game-engine]
path = "../game-engine"

[dependencies.crosscut-ffi]
path = "../ffi"

[dependencies.crosscut-protocol]
path = "../protocol"

[dependencies.crosscut-runtime]
path = "../runtime"
