[package]
name = "crosscut-protocol"
edition = "2021"

[dependencies]
ron = "*"

[dependencies.crosscut-compiler]
path = "../compiler"

[dependencies.crosscut-game-engine]
path = "../game-engine"

[dependencies.crosscut-runtime]
path = "../runtime"

[dependencies.serde]
version = "*"
features = ["derive"]
