[package]
name = "builder"
edition = "2021"
publish = false

[dependencies]
anyhow = "*"
tempfile = "*"
tracing = "*"
walkdir = "*"
wasm-bindgen-cli-support = "*"

[dependencies.crosscut-watch]
path = "../../crosscut/watch"

[dependencies.clap]
version = "*"
features = ["derive"]

[dependencies.tokio]
version = "*"
features = ["full"]

[dependencies.tracing-subscriber]
version = "*"
features = ["env-filter"]
